--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ iced = { version = "0.14.0", features = ["debug", "canvas", "image", "tokio"] }
 pipewire = "0.9.2"
 
 rand = "0.9.2"
+realfft = "3.5.0"
 tracing-subscriber = "0.3"
